styles/scss/vtex.slider-layout.scss
@import "./references";

.sliderLayoutContainer {
  justify-content: center;
}
.sliderRightArrow--main-slider-search {
  right: -35px;
}
.sliderLeftArrow--main-slider-search {
  left: -35px;
}
.sliderLayoutContainer--carousel {
  background-color: transparent;
  align-items: center;
}

.sliderTrackContainer {
  max-width: 1520px;
}

.paginationDotsContainer {
  bottom: 30px;
  @media screen and (max-width: em(768px)) {
    bottom: 10px;
  }
}

.sliderLayoutContainer--carousel-brand {
  .paginationDotsContainer {
    bottom: 15px;
    @media screen and (max-width: em( 768px)) {
      bottom: 0px;
    }
  }
}

.layoutContainer--shelf {
  margin-top: 20px;
  margin-bottom: 20px;
  max-width: 96rem;
}

.slide--shelf {
  margin-bottom: 25px;
  padding-left: 0.5rem;
  padding-right: 0.5rem;
}

//Home
.sliderTrackContainer--list-home-shelf-slider {
  width: 90%;
  margin: 20px auto;

  .slide {
    max-width: 200px;
    padding: 8px;
    box-sizing: border-box;
    background: #fff;
    box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.16);
    margin: 1em 0;
    :global(.vtex-product-price-1-x-installments--summary) {
      text-align: left !important;
    }
  }
}

.sliderLayoutContainer {
  .caretIcon {
    color: #333;
  }

  .sliderLeftArrow {
    /*&::before {
      content: "";
      @include arrow_left(14px);
    }*/
  }

  .sliderRightArrow {
    /*&::before {
      content: "";
      @include arrow_right(14px);
    }*/
  }
}

.sliderLayoutContainer--main-slider-home2 {
  padding: 20px 0;
  .sliderTrack--main-slider-home2 {
    padding: 5px 0;
    .slide--main-slider-home2 {
      background: #fff;
      max-width: 240px;
      padding: 8px;
      box-shadow: 0 3px 8px 0 rgb(0 0 0 / 8%);
      @media screen and (max-width: 768px) {
        max-width: 170px;
        width: 112px !important;
      }
    }
  }
}
.sliderLayoutContainer--main-slider-home2 {
  @media screen and (max-width: 768px) {
    padding: 60px 0;
  }
}
.sliderLayoutContainer--main-slider-home2-tab {
  .sliderRightArrow--main-slider-home2-tab {
    top: -110px;
    right: 75px;
    @media screen and (max-width: 768px) {
      top: 0px;
      right: 0;
    }
    &::before {
      content: url(/arquivos/tab_home_arrow.svg);
      display: block;

      position: relative;
    }
  }
  .sliderLeftArrow--main-slider-home2-tab {
    right: 135px;
    left: auto;
    top: -120px;
    @media screen and (max-width: 768px) {
      right: 55px;
      left: auto;
      top: -9px;
    }
    &::before {
      content: url(/arquivos/tab_home_arrow.svg);
      display: block;
      position: relative;
      transform: rotate(180deg);
    }
  }
  .caretIcon {
    display: none;
  }
}

.slideChildrenContainer {
  :global(.vtex-product-summary-2-x-containerNormal) {
    box-shadow: none;
    background: #fff;
    height: 420px;
    padding: 0 !important;
    :global(.vtex-store-components-3-x-price_installmentContainer--summary) {
      text-align: left !important;
      &::after {
        margin-top: 0 !important;
      }
    }
  }
}

:global(.vtex-shelf-1-x-slide) {
  :global(.vtex-store-components-3-x-price_installmentContainer--summary) {
    text-align: left !important;
    &::after {
      margin-top: 0 !important;
    }
  }
}

.slideChildrenContainer--carousel {
  .imageElement--carousel {
    max-height: inherit !important;
    width: auto !important;
  }
}

.sliderLayoutContainer--list-dep-shelf-slider {
  background: transparent !important;
}
.slide--list-dep-shelf-slider.slide--carousel {
  max-width: 100% !important ;
}
.slide--list-dep-shelf-slider {
  max-width: 200px;
  .slideChildrenContainer--carousel {
    margin: 0 0.2em;
  }

  .slideChildrenContainer--list-dep-shelf-slider {
    :global(.vtex-product-summary-2-x-productNameContainer) {
      text-align: center;
    }
    :global(.vtex-product-summary-2-x-nameContainer) {
      justify-content: center;
      border: 0;

      :global(.vtex-product-summary-2-x-productBrand) {
        font-size: 14px;
        text-transform: uppercase;
      }
    }
    .slide--list-dep-shelf-slider {
      max-width: 200px;
    }
  }
}

.sliderLayoutContainer--footer-slider {
  .sliderTrackContainer--footer-slider {
    max-width: 1090px;
    @media (min-width: em(1026px)) {
      padding: 0.7em 0;
    }
  }
  .slide--footer-slider {
    max-width: 355px;
  }
}

:global(.vtex-slider-layout-0-x-paginationDot--carousel) {
  background-color: #ababab;
}

:global(.vtex-slider-layout-0-x-paginationDot--carousel--isActive) {
  background-color: #ff9e19;
}

.sliderLayoutContainer--carousel {
  margin-bottom: 8px;
  @media screen and (max-width: em(1024px)) {
    margin-bottom: 0px;
  }
}

.imageElementLink--carousel-brand {
  position: relative;
  :global(.vtex-slider-layout-0-x-imageElementTitle) {
    text-align: center;
    margin: 0;
    bottom: 15px;
    position: absolute;
    width: 100%;
    color: #666;
    font-size: 16px;
  }
}

.slideChildrenContainer--carousel-text {
  background-color: #fff;
  height: 35px;
  padding-top: 0px;
  padding-bottom: 0px;
  margin-bottom: 20px;
  margin-left: 10px;
  border-radius: 100px;
  box-shadow: 0 4px 5px rgb(0 0 0 / 10%);
}

.sliderLayoutContainer--nd-mobile {
  margin-bottom: 10px;

  :global(.vtex-slider-layout-0-x-paginationDotsContainer--nd-mobile) {
    bottom: 0px;
  }
}

:global(.vtex-slider-layout-0-x-paginationDot--carousel-brand--isActive) {
  background-color: #ff9e19;
}

:global(.vtex-flex-layout-0-x-flexRow--row-walmart) {
  .sliderLeftArrow {
    background-color: #cccccc94 !important;
    padding-top: 3px;
    padding-bottom: 3px;
    padding-left: 7px;
    padding-right: 7px;
    border-radius: 40px;
    margin-left: 16px;
  }

  .sliderRightArrow {
    background-color: #cccccc94 !important;
    padding-top: 3px;
    padding-bottom: 3px;
    padding-left: 7px;
    padding-right: 7px;
    border-radius: 40px;
    margin-right: 16px;
  }

  :global(.vtex-slider-layout-0-x-caretIcon) {
    color: #777;
    width: 16px;
    font-weight: bold;
  }
}

:global(.vtex-product-summary-2-x-imageNormal) {
  max-height: 144px !important;
}

.sliderTrackContainer--parrillero-banner {
  .slide--parrillero-banner {
    :global(.vtex-store-components-3-x-imageElement) {
      cursor: pointer;
    }
  }
}

.slideChildrenContainer--parrillero-banner {
  padding-left: 2rem;
  padding-right: 2rem;
}

.sliderLayoutContainer--carrusel-todas-las-marcas {
  background-color: #fff;
}

:global(.vtex-tab-layout-0-x-contentContainer--tab-content-temporary) {
  background-color: #fff !important;
}

.imageElementLink--carrusel-cuadros {
  margin: 15px;
}

/* deparment page */
.infoCardContainer--deparment-infocards {
  flex-direction: column-reverse;
  display: flex;
  background: transparent;
  .infoCardCallActionContainer--deparment-infocards {
    :global(.vtex-button) {
      background: transparent;
      border: none;
      width: 100%;
      :global(.vtex-button__label) {
        color: #525252;
        font-size: 12px;
        padding: 0;
        white-space: nowrap;
      }
    }
  }
  .infoCardImageContainer--deparment-infocards {
    width: 100%;
    text-align: center;
  }
  .infoCardImage--deparment-infocards {
    width: 116px;
    height: 116px;
    border: 1px solid #dedede;
    border-radius: 100%;
    display: flex;
    margin: 0;
    text-align: center;

    &:hover {
      border: 4px solid #ffd500;
      box-shadow: 0px 4px 8px #00000029;
      margin: -3px;
    }
  }
  .infoCardTextContainer--deparment-infocards {
    width: 100%;
    .infoCardCallActionContainer--deparment-infocards {
      width: 100%;
      margin: 0;
    }
  }
}
.sliderLayoutContainer--deparment-infocards {
  margin-bottom: 40px;
  max-width: 1366px;
}
.slide--deparment-infocards {
  padding: 0 10px;
  margin-top: 10px;
}
.paginationDotsContainer--deparment-infocards {
  bottom: -20px;
}
.sliderTrackContainer--deparment-infocards {
  max-width: 95%;
}
.sliderRightArrow--deparment-infocards,
.sliderLeftArrow--deparment-infocards {
  .caretIcon--deparment-infocards {
    display: none;
  }
  background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='58' height='58' viewBox='0 0 58 58'%3E%3Cdefs%3E%3Cfilter id='Elipse_117' x='0' y='0' width='58' height='58' filterUnits='userSpaceOnUse'%3E%3CfeOffset dy='3' input='SourceAlpha'/%3E%3CfeGaussianBlur stdDeviation='3' result='blur'/%3E%3CfeFlood flood-opacity='0.102'/%3E%3CfeComposite operator='in' in2='blur'/%3E%3CfeComposite in='SourceGraphic'/%3E%3C/filter%3E%3C/defs%3E%3Cg id='icon_back' transform='translate(9 6)'%3E%3Cg transform='matrix(1, 0, 0, 1, -9, -6)' filter='url(%23Elipse_117)'%3E%3Ccircle id='Elipse_117-2' data-name='Elipse 117' cx='20' cy='20' r='20' transform='translate(9 6)' fill='rgba(255,255,255,0.5)'/%3E%3C/g%3E%3Cpath id='Caminho_1046' data-name='Caminho 1046' d='M15.771,10.487,9.3,4.021,2.837,10.487a1.662,1.662,0,1,1-2.35-2.35L8.137.487a1.66,1.66,0,0,1,2.35,0l7.65,7.65a1.66,1.66,0,0,1,0,2.35,1.7,1.7,0,0,1-2.367,0Z' transform='translate(13.332 28.627) rotate(-90)' fill='%23898989'/%3E%3C/g%3E%3C/svg%3E")
    no-repeat !important;
  height: 50px;
  width: 60px;
  margin-left: -5px;
  margin-top: -30px;
  padding: 0;
}
.sliderRightArrow--deparment-infocards {
  transform: rotate(180deg);
  margin-right: 0;
  margin-left: 0;
  margin-top: -15px;
}
.slideChildrenContainer--deparment-infocards {
  :global(.vtex-button__label) {
    color: #ed1d25;
  }
}
.paginationDot--deparment-infocards--isActive {
  background: #ffd500;
}
@media (max-width: 768px) {
  .infoCardContainer--deparment-infocards {
    .infoCardImage--deparment-infocards {
      width: 83px;
      height: 83px;
    }
  }
  .slide--deparment-infocards {
    padding: 0 2px;
  }
  .infoCardContainer--deparment-infocards {
    .infoCardCallActionContainer--deparment-infocards {
      :global(.vtex-button) {
        :global(.vtex-button__label) {
          font-size: 10px;
        }
      }
    }
  }
  .paragraph--deparment-product-list-title {
    margin-left: 15px;
  }
}
/* deparment page end */

